http to https (changed link to herocraft)

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                             </div>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="http://herocraft.cz/" class="text-white" target="_blank">Otevřít</a> / <a href="https://github.com/MilanTuryna/herocraft-webcms" target="_blank" class="text-white">GitHub repo.</a>
+                                            <a href="https://herocraft.cz/" class="text-white" target="_blank">Otevřít</a> / <a href="https://github.com/MilanTuryna/herocraft-webcms" target="_blank" class="text-white">GitHub repo.</a>
                                             <span class="text-muted float-end d-none d-md-block"><b>tech:</b> php, nette, javascript, mysql</span>
                                         </div>
                                     </div>
