Deleted zsvelkysenov.cz from "Kde mě najdeš" and added section vzdelani

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
                                     Dále na:
                                     <ul>
                                         <li><a href="https://www.itnetwork.cz/portfolio/55468" target="_blank">https://www.itnetwork.cz/portfolio/55468</a></li>
-                                        <li><a href="https://www.facebook.com/milanturyna/" target="_blank">https://www.facebook.com/milanturyna/</a></li>
-                                        <li><a href="https://www.zsvelkysenov.cz/" target="_blank">https://www.zsvelkysenov.cz/</a></li>
+                                        <li>Discord: Milan #8478</li>
                                     </ul>
                                     <button class="btn mt-1 btn-outline-danger btn-sm w-100 mb-3 mb-sm-0" disabled>PŘEJÍT NA BLOG – momentálně nedostupný</button>
                                 </div>
@@ -176,6 +175,24 @@
                         <section id="zkusenosti">
                             <h1 class="fw-light main-heading head-font">Zkušenosti a zaměření</h1>
                             <hr class="light-hr">
+                            Jak jsem již zmínil v prvním horním odstavci, tak se věnuji převážně vývoji webových systémů a aplikací na míru, avšak okrajově se zabývám i vývojem pluginů do hry Minecraft,
+                            infografice, občasnému redaktorství a Node.js microservices. Za celou dobu učení, jsem se setkal i s ostatními obory mimo mé zaměření jako je administrace linuxových serverů,
+                            SEO, multiplatformní desktopové aplikace (Electron, Apache Cordova...), vývoj her v Unity a C#, správa sítí avšak v těchto oborech mám pouze základní přehled.
+                        </section>
+                        <section id="vzdelani" class="mt-4">
+                            <h1 class="fw-light main-heading head-font">Vzdělání a certifikace</h1>
+                            <hr class="light-hr">
+                            Školy
+                            <ul>
+                                <li><a href="" style="text-decoration: none" target="_blank">Základní škola Velký Šenov:</a> 2014-2021</li>
+                                <li><a href="http://www.skolavdf.cz/" style="text-decoration: none" target="_blank">VOŠ, SPŠ, SOŠ Varnsdorf - informační technologie:</a> 2022 - nyní</li>
+                            </ul>
+                            Certifikáty
+                            <ul>
+                                <li>2018: Sololearn: Theoretical and practical understanding of <b>HTML</b> <a href="documents/certificates/sololearn-html.pdf" target="_blank">(zobrazit)</a></li>
+                                <li>2019: Sololearn: Theoretical and practical understanding of <b>PHP</b> <a href="documents/certificates/sololearn-php.pdf" target="_blank">(zobrazit)</a></li>
+                                <li>2022: Sololearn: Theoretical and practical understanding of <b>JAVA</b> <a href="documents/certificates/sololearn-java.pdf" target="_blank">(zobrazit)</a></li>
+                            </ul>
                             Jak jsem již zmínil v prvním horním odstavci, tak se věnuji převážně vývoji webových systémů a aplikací na míru, avšak okrajově se zabývám i vývojem pluginů do hry Minecraft,
                             infografice, občasnému redaktorství a Node.js microservices. Za celou dobu učení, jsem se setkal i s ostatními obory mimo mé zaměření jako je administrace linuxových serverů,
                             SEO, multiplatformní desktopové aplikace (Electron, Apache Cordova...), vývoj her v Unity a C#, správa sítí avšak v těchto oborech mám pouze základní přehled.
