Added link to vzdelani (TODO: i must fix changing active item in menu by scroll because it's not working good)

--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                                     <a href="#kontakt" class="list-group-item list-group-item-action">Kontakt a kde mě najdeš?</a>
                                     <a href="#projekty" class="list-group-item list-group-item-action">Připnuté projekty</a>
                                     <a href="#zkusenosti" class="list-group-item list-group-item-action">Zkušenosti</a>
+                                    <a href="#vzdelani" class="list-group-item list-group-item-action">Vzdělání a certifikace</a>
                                 </div>
                             </nav>
                         </div>
