deleted anchor menu js and changed some texts

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                             <section id="programatorske-svetlo">
                                 <h1 class="fw-light main-heading head-font">V programátorském světle</h1>
                                 <hr class="light-hr">
-                                Věnuji se <strong>převážně vývoji webových systémů, aplikací a zajímavým projektům všeho spektra</strong>. Ke své momentální činnosti jsem přišel už v mládí, kdy jsem neustále řešil problémy
-                                s počítačem a tak nějak to k tomu přišlo. Přímo programování se věnuji posledních pár let (asi 3 roky, nepočítám to).
-                                Baví mě ta volnost vývojaře, kdy si mohu říct <strong>„Chci to, udělám to!“</strong> a je to. Z prvního pohledu většiny nezkušených lidí, to vypadá jako strašná nuda, ale ta část <strong>psaní kódu je
+                                Věnuji se <strong>převážně vývoji webových systémů, aplikací a zajímavým projektům všeho spektra</strong>. Svou momentální činností se věnuji už od mládí, kdy jsem neustále řešil problémy
+                                s počítačem a tak nějak to k tomu přišlo. Přímo programování se věnuji posledních pár let (asi 6 let).
+                                Baví mě ta volnost vývojaře, kdy si mohu říct <strong>„Chci to, udělám to!“</strong> a je to. Pro většinu nezkušených lidí to na první pohled vypadá jako strašná nuda, ale ta část <strong>psaní kódu je
                                 pouze jehla v kupce sena.</strong>
                                 <div class="bg-light mt-2 p-2">
                                     <h2 class="text-muted text-center mt-1 second-heading" style="font-weight: 500">Nejsem stolet za opicema! Používám nástroje.</h2>
@@ -175,16 +175,13 @@
                         <section id="zkusenosti">
                             <h1 class="fw-light main-heading head-font">Zkušenosti a zaměření</h1>
                             <hr class="light-hr">
-                            Jak jsem již zmínil v prvním horním odstavci, tak se věnuji převážně vývoji webových systémů a aplikací na míru, avšak okrajově se zabývám i vývojem pluginů do hry Minecraft,
-                            infografice, občasnému redaktorství a Node.js microservices. Za celou dobu učení, jsem se setkal i s ostatními obory mimo mé zaměření jako je administrace linuxových serverů,
-                            SEO, multiplatformní desktopové aplikace (Electron, Apache Cordova...), vývoj her v Unity a C#, správa sítí avšak v těchto oborech mám pouze základní přehled.
+                            Jak jsem již zmínil v prvním odstavci, věnuji se převážně vývoji webových systémů a aplikací na míru, avšak okrajově se zabývám i dalšími oblastmi, jako je vývoj pluginů do hry Minecraft, infografika, občasné redaktorství a Node.js microservices.
                         </section>
                         <section id="vzdelani" class="mt-4">
                             <h1 class="fw-light main-heading head-font">Vzdělání a certifikace</h1>
                             <hr class="light-hr">
                             Školy
                             <ul>
-                                <li><a href="" style="text-decoration: none" target="_blank">Základní škola Velký Šenov:</a> 2014-2021</li>
                                 <li><a href="http://www.skolavdf.cz/" style="text-decoration: none" target="_blank">VOŠ, SPŠ, SOŠ Varnsdorf - informační technologie:</a> 2022 - nyní</li>
                             </ul>
                             Certifikáty
