changed some texts

--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
                         <section id="zkusenosti">
                             <h1 class="fw-light main-heading head-font">Zkušenosti a zaměření</h1>
                             <hr class="light-hr">
-                            Jak jsem již zmínil v prvním odstavci, věnuji se převážně vývoji webových systémů a aplikací na míru, avšak okrajově se zabývám i dalšími oblastmi, jako je vývoj pluginů do hry Minecraft, infografika, občasné redaktorství a Node.js microservices.
+                            Jak jsem již zmínil v prvním odstavci, věnuji se převážně vývoji webových systémů a aplikací na míru, avšak okrajově se zabývám i dalšími oblastmi, jako je vývoj pluginů do hry Minecraft, infografika, občasné redaktorství a Node.js microservices. Za celou dobu učení, jsem se setkal i s ostatními obory mimo mé zaměření jako je administrace linuxových serverů,
+                            SEO, multiplatformní desktopové aplikace (Electron, Apache Cordova...), vývoj her v Unity a C#, správa sítí avšak v těchto oborech mám pouze základní přehled.
                         </section>
                         <section id="vzdelani" class="mt-4">
                             <h1 class="fw-light main-heading head-font">Vzdělání a certifikace</h1>
@@ -190,9 +191,6 @@
                                 <li>2019: Sololearn: Theoretical and practical understanding of <b>PHP</b> <a href="documents/certificates/sololearn-php.pdf" target="_blank">(zobrazit)</a></li>
                                 <li>2022: Sololearn: Theoretical and practical understanding of <b>JAVA</b> <a href="documents/certificates/sololearn-java.pdf" target="_blank">(zobrazit)</a></li>
                             </ul>
-                            Jak jsem již zmínil v prvním horním odstavci, tak se věnuji převážně vývoji webových systémů a aplikací na míru, avšak okrajově se zabývám i vývojem pluginů do hry Minecraft,
-                            infografice, občasnému redaktorství a Node.js microservices. Za celou dobu učení, jsem se setkal i s ostatními obory mimo mé zaměření jako je administrace linuxových serverů,
-                            SEO, multiplatformní desktopové aplikace (Electron, Apache Cordova...), vývoj her v Unity a C#, správa sítí avšak v těchto oborech mám pouze základní přehled.
                         </section>
                         <hr>
                         <footer>
