added js certificate

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                                 <li>2018: Sololearn: Theoretical and practical understanding of <strong>CSS</strong> <a href="documents/certificates/sololearn-css.pdf" target="_blank">(zobrazit)</a></li>
                                 <li>2019: Sololearn: Theoretical and practical understanding of <strong>PHP</strong> <a href="documents/certificates/sololearn-php.pdf" target="_blank">(zobrazit)</a></li>
                                 <li>2022: Sololearn: Theoretical and practical understanding of <strong>JAVA</strong> <a href="documents/certificates/sololearn-java.pdf" target="_blank">(zobrazit)</a></li>
+                                <li>2024: Sololearn: Theoretical and practical understanding of <strong>JAVASCRIPT</strong> <a href="documents/certificates/sololearn-javascript.pdf" target="_blank">(zobrazit)</a></li>
                             </ul>
                         </section>
                         <hr>
